2018-07-13  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_isnoisy.m: Clarify the case of noise model objects

	* core/stk_isnoisy.m: Clarify the case of noise model objects.

	stk_sampling_nestedlhs.m: Minor doc fix

	* sampling/stk_sampling_nestedlhs.m: Minor doc fix.

2018-07-12  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim.m (provide_param0_value): Fix the case of parameter objects

	* param/estim/stk_param_estim.m: Fix the case where param0 is a
	parameter object instead of a vector of numeric parameter values.

	stk_param_estim.m: Rewrite nargin checks in a more efficient way

	* param/estim/stk_param_estim.m: Rewrite nargin checks in a more
	efficient way.

2018-07-11  Julien Bect  <julien.bect@centralesupelec.fr>

	Add an optional select argument to stk_set_optimizable_parameters

	* core/@stk_model_gpposterior/stk_set_optimizable_parameters.m:
	Add an optional select argument to stk_set_optimizable_parameters.
	* core/@struct/stk_set_optimizable_parameters.m: Idem.
	* param/classes/stk_set_optimizable_parameters.m: Idem.

	Implement stk_set/get_optimizable_parameters for models

	* core/@stk_model_gpposterior/stk_set_optimizable_parameters.m:
	Implement stk_set_optimizable_parameters for posterior models.
	* core/@struct/stk_set_optimizable_parameters.m: Implement
	stk_set_optimizable_parameters for prior models, currently
	described by a structure.
	* core/@stk_model_gpposterior/stk_get_optimizable_parameters.m:
	Implement stk_get_optimizable_parameters for posterior models.
	* core/@struct/stk_get_optimizable_parameters.m: Implement
	stk_get_optimizable_parameters for prior models, currently
	described by a structure.

2018-07-10  Julien Bect  <julien.bect@centralesupelec.fr>

	Make get_defaultbounds_lnv a (renamed) standalone function for clarity.

	* param/estim/stk_param_getdefaultbounds_lnv.m: Replacement
	function for subfunction get_defaultbounds_lnv in stk_param_estim.