@@ -1,5 +1,16 @@
 2018-07-13  Julien Bect  <julien.bect@centralesupelec.fr>
 
+	Encapsulate Gaussian logpdf / logpdf_grad computations
+
+	* misc/distrib/stk_distrib_logpdf.m: Compute the Gaussian logpdf,
+	still assuming the good ol' struct representation.
+	* misc/distrib/stk_distrib_logpdf_grad.m: Compute the gradient of
+	the Gaussian logpdf.
+	* param/estim/stk_param_relik.m: Simplify the code using the two
+	new internal functions.
+
+2018-07-13  Julien Bect  <julien.bect@centralesupelec.fr>
+
 	stk_isnoisy.m: Clarify the case of noise model objects
 
 	* core/stk_isnoisy.m: Clarify the case of noise model objects.
